Alterações de configuração

--- a/about.html
+++ b/about.html
@@ -9,5 +9,5 @@ Tenho tentado melhorar minhas habilidades e minha presença na Web há uns 4 ano
 Vou escrever pricipalmente sobre temas que estejam na minha mesa e que eu veja algum interesse de outros...Algum conteúdo pessoal também aparecerá, eventualmente!
 
 <small>
-Agradeço ao Panos(https://panossakkos.github.io/) pelo tema que uso neste website.
+Agradeço ao <a href="https://panossakkos.github.io/" target="_blank">Panos Sakkos</a> pelo tema que uso neste website.
 </small>
