Atualização do site (cores e alguns textos)

--- a/about.html
+++ b/about.html
@@ -5,9 +5,4 @@ title: Sobre
 ---
 ## Sobre
 
-Tenho tentado melhorar minhas habilidades e minha presença na Web há uns 4 anos e uma área para agrupar e compartilhar meus projetos, estudos e experiências nesse caminho sempre esteve "em construção".
-Vou escrever pricipalmente sobre temas que estejam na minha mesa e que eu veja algum interesse de outros...Algum conteúdo pessoal também aparecerá, eventualmente!
-
-<small>
-Agradeço ao <a href="https://panossakkos.github.io/" target="_blank">Panos Sakkos</a> pelo tema que uso neste website.
-</small>
+Um lugar para escrever um pouco. Geralmente algo técnico!
